more synapse work

--- a/synapse/synapse_SNR.ipynb
+++ b/synapse/synapse_SNR.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:847dda8fd870555af637625824e8424c6c09a767b2784906e81dcb01825fdb1f"
+  "signature": "sha256:b4f98e7e433fd3da6cf15d3635666b31ad0e25e35f1db4752384e1693d0abe3c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This notebook looks at the signal to noise ratio (SNR) of different synapse implementations.\n",
+      "This notebook looks at the signal to noise ratio (SNR) of a synapse with Poisson input spike train with frequency $\\lambda$.\n",
       "\n",
       "$$SNR = \\mu / \\sigma$$\n",
       "\n",
@@ -31,8 +31,6 @@
       "\n",
       "where $x$ is the synapse state and $u$ is the input. $u$ is the spike input. Each spike delivers an impulse input to the synapse. That is,\n",
       "$$u=\\sum_i\\delta(t-t_i)$$\n",
-      "\n",
-      "We model the input spike train as a Poisson process with frequency $\\lambda$.\n",
       "\n",
       "We would like to obtain expressions for $\\mu=E[X]$ and $\\sigma = \\sqrt{Var(X)}$ where $X$ is the random variable describing the state of the synapse. \n",
       "\n",
