--- a/synapse/synapse_distribution.ipynb
+++ b/synapse/synapse_distribution.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1376bfb344672bd8fefbdd277e8d7755e713e1d1e3f69c87da9fa537311c75a6"
+  "signature": "sha256:a8665509dadcb25f3ffce6500bef4eaa2bf489bd0ea05af5469961056dec5322"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -34,8 +34,111 @@
       " &= \\frac{E[x]}{\\sqrt{Var(x)}}\n",
       "\\end{align}\n",
       "\n",
-      "The problem with defining the SNR in this way is that if a synapse is bombarded with equal parts \n"
+      "The problem with defining the SNR in this way is that if a synapse is bombarded with positive spikes and negative spikes at equal rates, the $E[x]=0$ and so $SNR(x)=0$.\n"
      ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Simulation models"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%pylab inline"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Populating the interactive namespace from numpy and matplotlib\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# define the models and functions used in simulation\n",
+      "def synapse_state(spike_times, tau=1., spike_weights=None):\n",
+      "    \"\"\"computes the current state due to spike times previous to the current time\"\"\"\n",
+      "    x = np.exp(-spike_times/tau)/tau\n",
+      "    state = sum(x)\n",
+      "    return state"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Synapse distribution measurement"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "First we seek to answer it makes a difference how we measure the synapse state to build the steady-state distribution."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# time in units of tau and input rate in units of 1/tau\n",
+      "n = 30 # number of experiments\n",
+      "\n",
+      "f = 100\n",
+      "shifts = np.linspace(0,1,n)\n",
+      "st = np.arange(100)\n",
+      "x = np.zeros(n)\n",
+      "for i in xrange(n):\n",
+      "    x[i] = synapse_state(st+shifts[i])\n",
+      "plot(x)\n",
+      "print mean(x)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1.00082818456\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "png": "iVBORw0KGgoAAAANSUhEUgAAAXgAAAEACAYAAAC57G0KAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHHdJREFUeJzt3Xu8lXPe//HXp5Pk0GEyIYeUukuJUIrSIoc0qUZ1J6Ec\nktvcht89DuGeac/cGjKMGA2JQtRQORRCpTXcJkqUrQO5C0Ui4xTGlL6/Pz6L9mx777Xbe619rXWt\n9/Px2I/HXmtdrfXZ14P3/u7P9b2+XwshICIi8VMr6gJERCQ7FPAiIjGlgBcRiSkFvIhITCngRURi\nSgEvIhJTaQPezCab2SYzK67gmISZvWZmb5hZMqMViohIlVi6efBm1gPYAtwfQji0jNcbAS8Cp4QQ\nNphZ0xDC5qxUKyIilZZ2BB9CeAH4tIJDzgRmhRA2pI5XuIuI5IBM9OBbA03MbKGZvWJmZ2fgPUVE\npJrqZOA96gJHAL2ABsAiM3sphLAmA+8tIiJVlImAXw9sDiF8A3xjZs8DhwH/EvBmpkVvRESqIIRg\nVfl3mWjRPA50N7PaZtYAOBpYWdaBIQR9hcCYMWMiryFXvnQudC50Lir+qo60I3gzmw70BJqa2Xpg\nDN6WIYQwMYSw2syeBl4HtgOTQghlBryIiNSctAEfQhhaiWNuAm5Kd9y0aXDmmZWsTEREqqVG72Qd\nPRrGjYNq/tWR9xKJRNQl5Aydix10LnbQuciMtDc6ZeyDzMKGDYE+faB7d7jtNqhdu0Y+WkQkb5kZ\noYoXWWs04EMIfP45DBoEu+4K06fDbrvVyMeLiOSl6gR8jS821rAhPPkkNGkCxx8PmzbVdAUiIoUh\nktUk69WDKVOgTx/o1g1Wr46iChGReKvxFk1p994LV10FDz8MPXvWSCkiInkjr1o0pY0Y4dMnBw+G\nBx6IuhoRkfiIfAT/vRUr4Gc/g/POg1//GqxKv69EROIlr2bRVOTDD+G006BdO5g0CXbZpUZKExHJ\nWXndoilp773hr3+FLVvg5JPhk0+irkhEJH/lVMADNGgAM2fC0Uf7DJs1WnRYRKRKci7gAWrVghtv\nhCuugB49fFQvIiI7JycD/nsjR8KDD8K//7tPpxQRkcrLqYus5Vm1Cvr29amUv/+9j/BFRApBbGbR\nVGTzZjj9dPjJT2DqVNh99wwWJyKSo2Izi6YiTZvCvHnQqJH35devj7oiEZHcljcBDz4vfvJkGDoU\nunaFl1+OuiIRkdyVNy2a0mbPhvPPh1tv1S5RIhJfBdGDL0txMfTr5wH/P/+ji68iEj8FG/AAH30E\nAwfuuPi6xx4Z/wgRkcgUxEXW8vz0p7BggV+EPeYYWLcu6opERHJD3gc8+AYikybBhRf68gbJZNQV\niYhELxYBD7688CWX+JryQ4bAn/8MNdR9EhHJSXnfgy/L//0f9O8Pxx4Lf/qTj/BFRPJRQffgy9Kq\nFSxa5Bt6n3CCrzMvIlJoYhnw4LNpHnkEevWCLl1gyZKoKxIRqVmxbNGU9uijfgH25pvhnHMiKUFE\npEoKeh58Za1YAQMG+L6vf/gD1K0bWSkiIpWW1R68mU02s01mVpzmuM5mts3MTq9KIdnWvj0sXgxv\nvQUnneQ3SImIxFllevBTgN4VHWBmtYFxwNNAlX7T1ITGjWHOHOjeHTp3hldeiboiEZHsSRvwIYQX\ngE/THHYJMBP4OBNFZVPt2nDddXDLLXDqqb46pYhIHFV7Fo2ZNQf6A3eknsqL24tOPx2ef973fr3o\nIvj226grEhHJrExMkxwPjE5dQTVyuEVTWrt23pfftAkSCdiwIeqKREQyp04G3uNI4C9mBtAUONXM\ntoYQZpc+sKio6IfvE4kEiUQiAx9fPXvuCbNm+Ui+Sxff5Pv446OuSkQKVTKZJJmhBbUqNU3SzFoA\nc0IIh6Y5bkrquEfKeC3SaZKVMX8+nHUW/OpXcPnlvr6NiEiUsj1NcjrwN+DfzGy9mZ1nZqPMbFRV\nPjCXnXiit2xmzIBBg+CLL6KuSESk6grmRqed8e23cNll8Nxz3r7p0CHqikSkUGmxsQzbZRe44w64\n9lrvxz/wQNQViYjsPI3g03j9dW/X9Orlc+fr14+6IhEpJBrBZ1HHjr4S5ccf+x2w77wTdUUiIpWj\ngK+Ehg39wuuwYXD00b7cgYhIrlOLZictWuRbAp5xBowdq1UpRSS71KKpQd26wauvQnGxX4DV3a8i\nkqsU8FXQtCk8+ST06QNHHQVPPx11RSIiP6YWTTX99a/emx8+HH77W6iTicUfRERStKNTxD76yJc4\n+Mc/YNo02G+/qCsSkbhQDz5iP/2pt2l69/aWzVNPRV2RiIhG8Bn3wgveshkyxGfZ1KsXdUUiks80\ngs8hPXr4LJvVq/37tWujrkhECpUCPguaNoXZs2HoUOja1W+SEhGpaWrRZNnSpd6uOeEEGD8eGjSI\nuiIRySdq0eSwI4/0ls3XX/sF2OLiqCsSkUKhgK8Be+7pSw6PHu0j+QkToAD/mBGRGqYWTQ1bs8Z7\n8/vuC5Mne79eRKQ8atHkkdat4W9/g7Zt4fDDYcGCqCsSkbjSCD5C8+bBiBE+b/666zRnXkR+TCP4\nPHXSSbBsmc+Z79YN3nwz6opEJE4U8BHbay94/HG44ALfMequu3QBVkQyQy2aHLJypbdrDjwQJk3y\n8BeRwqYWTUwccgi89BK0aeMXYLXOvIhUh0bwOWrhQl9jvl8/uPFG3QErUqg0go+h44+H5cvh73/3\nu2GXLo26IhHJNwr4HNa4sW8g8pvfwKmn+vLD27ZFXZWI5Au1aPLEhg1w7rmwZQtMnQoHHxx1RSJS\nE9SiKQD77QfPPANnnulz5u+8U9MpRaRiGsHnodWr4eyzfR2bu++G5s2jrkhEsiWrI3gzm2xmm8ys\nzIVuzWyYmS03s9fN7EUz61iVQqTy2rb19Wy6dYNOnbxPr9+dIlJa2hG8mfUAtgD3hxAOLeP1bsDK\nEMLnZtYbKAohdC3jOI3gs+CVV3w6Zbt2cMcdujlKJG6yOoIPIbwAfFrB64tCCJ+nHr4M7FeVQqRq\njjrKp1C2bAkdO8Kjj0ZdkYjkikxfZD0feCrD7ylp1K/vN0PNnAlXXglnneXz50WksNXJ1BuZ2fHA\necCx5R1TVFT0w/eJRIJEIpGpjxfg2GN9dcprroFDD4WJE6Fv36irEpGdkUwmSSaTGXmvSs2iMbMW\nwJyyevCp1zsCjwC9Qwhvl3OMevA1KJmE886DHj18s+/GjaOuSESqItJ58GZ2AB7uZ5UX7lLzEgl4\n/XXYYw8fzT/5ZNQViUhNq8wsmulAT6ApsAkYA9QFCCFMNLO7gZ8D76X+ydYQQpcy3kcj+IgsXAjn\nn++j+VtugSZNoq5IRCqrOiN43ehUILZs8d78rFkwYQIMGBB1RSJSGQp4qbQXXvDR/JFHwm23ad68\nSK7TWjRSaT16+Eyb5s29Nz99uu6CFYkrjeAL2OLFPtOmZUu/C1Zr2ojkHo3gpUq6dPG7YDt18i0C\n77oLtm+PuioRyRSN4AWAN97w3vyuu/qG361bR12RiIBG8JIBHTr4CpUDBvgqlTfcAFu3Rl2ViFSH\nRvDyI++8AxddBB9+6KP5zp2jrkikcGkELxnVogXMnQuXX+5r2fzXf/k8ehHJLwp4KZOZr0q5YgV8\n8om3cJ7SOqEieUUtGqmU+fNh1Chff378eNhnn6grEikMatFI1p14os+0adXKNxa5805NqRTJdRrB\ny0574w0fzYfgQd9Ru/CKZI1G8FKjOnTwNW1GjPCR/ZVXwldfRV2ViJSmgJcqqVULLrwQioth40Zo\n3x5mz466KhEpSS0ayYgFC+Dii6FtW1+l8sADo65IJB7UopHI9erlO0h17uxLEY8bB//8Z9RViRQ2\njeAl49auhUsugXXrfHOR44+PuiKR/KUNPyTnhACPPQaXXQbdu8NNN2nuvEhVqEUjOccMfv5zWLkS\nDjjANxcZPx62bYu6MpHCoRG81IjVq71ts2kT3H47HHdc1BWJ5Ae1aCQvhAAzZ8KvfuVbB/7hD7Dv\nvlFXJZLb1KKRvGAGgwfDqlW+YmXHjh7ymm0jkh0KeKlxu+0GY8fCokWQTHrQP/NM1FWJxI9aNBK5\nJ57w2Tbt28Mf/+gLmomIU4tG8lrfvr6AWdeucPTRcO212mBEJBMU8JIT6teHq6+G5cvh3Xd9yYMH\nH/QLsyJSNWrRSE568UW49FKoVw9uvVX7wkrhUotGYufYY2HxYhg5Evr3h+HD4YMPoq5KJL+kDXgz\nm2xmm8ysuIJjbjOzNWa23Mw6ZbZEKVS1asG55/pNUvvs43fDjh0L33wTdWUi+aEyI/gpQO/yXjSz\nPsDBIYTWwIXAHRmqTQSAPfeEG26AJUvgtdegXTt46CH150XSSRvwIYQXgE8rOKQfcF/q2JeBRmbW\nLDPliezQsqXfCXvffb4ccffu3sYRkbJlogffHFhf4vEGYL8MvK9ImXr29NH8BRf4gmbDhsF770Vd\nlUjuqZOh9yl9hbfMP56Liop++D6RSJBIJDL08VJoatf2/vzgwb7cQadOvoXg1Vd7S0ckXyWTSZLJ\nZEbeq1LTJM2sBTAnhHBoGa/dCSRDCH9JPV4N9AwhbCp1nKZJSta8/z7893/D3LkwZozPvqmTqeGL\nSISiniY5GzgnVUhX4LPS4S6Sbc2bw5QpHvAzZ/qMm9mzdSFWClvaEbyZTQd6Ak2BTcAYoC5ACGFi\n6pjb8Zk2XwHnhhBeLeN9NIKXGhGCB/0VV8Bee3kLRzdKSb7SevAiZdi2zUf1Y8b4hdmxY30mjkg+\nibpFI5KT6tTxXvyaNT53vnNnX7Vy8+aoKxOpGQp4ib3ddoPf/Mb3h922zRcy+/3v4euvo65MJLsU\n8FIwmjXz/WAXLfJVK9u0gbvu0kbgEl/qwUvBWrIErrrKp1iOHQsDB/q2giK5RBdZRaooBHj2Wb9B\nqnZtX/OmV6+oqxLZQQEvUk3bt8OMGX6zVIsW3qPX1ErJBZpFI1JNtWrBkCF+IXbQIF/jZuBAWLUq\n6spEqk4BL1JC3bowapRPreza1efPjxgB69ZFXZnIzlPAi5Rh1139Ttg1a+DAA+Goo+Dii7WrlOQX\nBbxIBRo2hN/+Ft58Exo0gA4d4PLL4eOPo65MJD0FvEglNG0KN90Eb7zhWwa2besXZD+taCsckYgp\n4EV2wr77woQJsHQpbNwIrVvD734HX3wRdWUiP6aAF6mCFi3gnnvgpZe8T3/wwXD99fDll1FXJrKD\nAl6kGg4+GKZOheefh+Jif3zjjfDVV1FXJqKAF8mItm1h2jR47jlv37Rq5evQK+glSgp4kQxq3x4e\negjmz/e1blq18ouzCnqJggJeJAs6dICHH4Z582DxYg/6G2+ELVuirkwKiQJeJIsOPdSDfv78Ha2b\n66/XrBupGQp4kRrQoYO3bpJJWLHCg/53v4PPPou6MokzBbxIDWrXDh54AF58Edau9aC/9lptIyjZ\noYAXiUCbNnDvvX4hdvNmf3z55X7zlEimKOBFItSyJUyc6FsIbt3qs3B+8Qt4992oK5M4UMCL5ID9\n94dbb/X15/fYA444As49F1avjroyyWcKeJEc0qyZbxv49tvenz/uOBg8GF59NerKJB8p4EVyUOPG\nvlrlunVwzDHQrx+ccorPwtHOl1JZ2pNVJA98+63Pvhk3Dpo0gdGjPfRraYgWe9p0W6RAfPcdPPaY\nt3G2bIErr4Rhw6Bevagrk2xRwIsUmBB8YbNx43yj8MsugwsvhD33jLoyybTqBHzaP/DMrLeZrTaz\nNWZ2VRmvNzWzp81smZm9YWYjqlKIiFSeGfTqBc8+C3Pm+EXYli29daN9Y+V7FQa8mdUGbgd6A4cA\nQ82sXanD/hN4LYRwOJAAbjazOlmoVUTK0KmTL1W8ZAl8/bUvi3DeeT6yl8KWbgTfBXg7hPBOCGEr\n8Begf6ljNgLf/2G4J/BJCGFbZssUkXQOOghuu813mGrZEk44AX72M1i4UDNvClW6gG8OrC/xeEPq\nuZImAe3N7ANgOXBp5soTkZ31k5/4FMt33oEBA+A//gOOOspH+Vu3Rl2d1KR0rZTK/N6/BlgWQkiY\nWStgnpkdFkL40e6URUVFP3yfSCRIJBI7UaqI7Iz69WHkSDj/fHjySbj5Zu/R//KX/nzDhlFXKGVJ\nJpMkk8mMvFeFs2jMrCtQFELonXp8NbA9hDCuxDFPAWNDCC+mHi8ArgohvFLqvTSLRiRiS5fCH/8I\nc+fCOefApZd6a0dyVzZn0bwCtDazFmZWDxgCzC51zGrgxFQhzYB/A9ZWpRgRya4jj4QHH/TFzXbZ\nBTp3hoED4X//V336OEo7D97MTgXGA7WBe0II15vZKIAQwkQzawpMAQ7Af2FcH0KYVsb7aAQvkmO2\nbIH77oPx46FRI59PP3iwbpzKJbrRSUSqZft279Pfcgu8+aZfmB01CvbaK+rKJKs3OolI/NWqBaed\n5nfHzp3rM3DatPH59MuWRV2dVJUCXkT+RceOcPfdPp/+4IOhb1/o2RNmzYJtusMlr6hFIyIV2roV\nHnkE/vQneO89b9+MHAlNm0ZdWWFQi0ZEsqZuXRgyxGfaPPYYvPUWtG7tO05pI5LcphG8iOy0zZu9\njXPHHdC8ue8jO2iQT72UzNIsGhGJxLZt8MQTMGECFBf7XbOjRsEBB0RdWXyoRSMikahTx9e7mTfP\ntxP88ktf3XLAAF/KePv2qCssbBrBi0hGbdniC5tNmODLF190EYwY4Yugyc5Ti0ZEck4IsGiR9+nn\nzIH+/T3su3b1DUukchTwIpLTNm+Ge++FiROhQQMP+mHDtMVgZSjgRSQvbN/ud8veeScsWOAzb0aN\n8vXqpWwKeBHJOxs3wpQpMGkSNGnim4afeSbssUfUleUWBbyI5K3t233GzaRJProfNMjvlO3cWb16\nUMCLSExs3Oi9+rvvht1396AfNgwaN466sugo4EUkVrZv93n1kyb56pZ9+8IFF/iiZ4U2qlfAi0hs\nffIJPPCAh/0//uFLGA8f7kskFAIFvIjEXgiweDFMngwzZsAxx3jY9+0b7x2oFPAiUlC++gpmzvRZ\nOCtXwllnedh36BB1ZZmngBeRgvX2235h9t57YZ99fBnjM87wqZdxoIAXkYL33Xcwf74H/dy5cPLJ\nvgbOySf7omj5SgEvIlLCp5/Cww972L/7rk+1HD48P1s4CngRkXKsXg333QdTp0KzZh70Q4fCXntF\nXVnlKOBFRNL47jtYuNDDfs4cOO44OPtsOO00qF8/6urKp4AXEdkJW7b4RuL33+/7yg4c6GHfvTvU\nyrFtkBTwIiJVtGGDb1By//0e/MOG+bTLdu2irswp4EVEqikEeP11v2t22jTYe28P+zPOgH33ja4u\nBbyISAZ9952vhfPgg/Doo3DkkR72p58ODRvWbC0KeBGRLPnmG3jiCZg+3TcpOekkn4XTpw/sumv2\nPz+rAW9mvYHxQG3g7hDCuDKOSQC3AHWBzSGERBnHKOBFJK999hnMmuVhv3Qp9OvnYd+rF9Stm53P\nzFrAm1lt4E3gROB9YAkwNISwqsQxjYAXgVNCCBvMrGkIYXMZ76WAF5HY2LjRb6aaPh3WrvWZOEOH\nZn4mTjYDvhswJoTQO/V4NEAI4YYSx1wM7B1C+E2aIhXwIhJL69bBQw952H/yCQwe7Bdnu3Sp/vr1\n1Qn4dL9nmgPrSzzekHqupNZAEzNbaGavmNnZVSlERCRfHXQQjB4Ny5fDvHl+IXb4cH/+yiu9nRPF\n+DZdwFempLrAEUAf4BTg12bWurqFiYjko3btoKgIVq2Cxx/33vyQIdC6NVxzDSxbVnNhn26NtfeB\n/Us83h8fxZe0Hr+w+g3wjZk9DxwGrCn9ZkVFRT98n0gkSCQSO1+xiEgeMIPDDvOv667zO2ZnzPCp\nlnXq+ObigwfD4Yf/axsnmUySTCYzU0OaHnwd/CJrL+ADYDE/vsjaFrgdH73vArwMDAkhrCz1XurB\ni0jBC8FbNjNm+FetWh70gwbBEUf8uGef7WmSp7JjmuQ9IYTrzWyUFxompo65HDgX2A5MCiHcVsb7\nKOBFREoIAV57zXenmjEDtm3zds711+8Iet3oJCKS50KA4mLfd/aCC3Y8r4AXEYmpbE6TFBGRPKWA\nFxGJKQW8iEhMKeBFRGJKAS8iElMKeBGRmFLAi4jElAJeRCSmFPAiIjGlgBcRiSkFvIhITCngRURi\nSgEvIhJTCngRkZhSwIuIxJQCXkQkphTwIiIxpYAXEYkpBbyISEwp4EVEYkoBLyISUwp4EZGYUsCL\niMSUAl5EJKYU8CIiMaWAFxGJKQW8iEhMpQ14M+ttZqvNbI2ZXVXBcZ3NbJuZnZ7ZEkVEpCoqDHgz\nqw3cDvQGDgGGmlm7co4bBzwNWBbqjJVkMhl1CTlD52IHnYsddC4yI90IvgvwdgjhnRDCVuAvQP8y\njrsEmAl8nOH6Ykn/8e6gc7GDzsUOOheZkS7gmwPrSzzekHruB2bWHA/9O1JPhYxVJyIiVZYu4CsT\n1uOB0SGEgLdn1KIREckB5rlczotmXYGiEELv1OOrge0hhHEljlnLjlBvCnwNjAwhzC71XhrZi4hU\nQQihSgPndAFfB3gT6AV8ACwGhoYQVpVz/BRgTgjhkaoUIyIimVOnohdDCNvM7D+BZ4DawD0hhFVm\nNir1+sQaqFFERKqgwhG8iIjkr6zfyVrZG6XiyMz2N7OFZrbCzN4ws1+mnm9iZvPM7C0ze9bMGkVd\na00xs9pm9pqZzUk9LshzYWaNzGymma0ys5VmdnQBn4urU/+PFJvZNDPbpVDOhZlNNrNNZlZc4rly\nf/bUuVqTytST071/VgO+sjdKxdhW4P+FENoDXYFfpH7+0cC8EEIbYEHqcaG4FFjJjhlahXoubgWe\nCiG0AzoCqynAc2FmLYCRwBEhhEPxVvAZFM65mILnY0ll/uxmdggwBM/S3sCfzazCDM/2CL6yN0rF\nUgjhwxDCstT3W4BV+H0E/YD7UofdBwyIpsKaZWb7AX2Au9kx86rgzoWZNQR6hBAmg1/rCiF8TgGe\nC+ALfCDUIDWpowE+oaMgzkUI4QXg01JPl/ez9wemhxC2hhDeAd7GM7Zc2Q74tDdKFYrUSKUT8DLQ\nLISwKfXSJqBZRGXVtFuAK4DtJZ4rxHNxEPCxmU0xs1fNbJKZ7UYBnosQwt+Bm4H38GD/LIQwjwI8\nFyWU97Pvi2fo99LmabYDXldwATPbHZgFXBpC+LLka6kbxGJ/nsysL/BRCOE1yrkZrlDOBT577Qjg\nzyGEI4CvKNWCKJRzYWatgMuAFniA7W5mZ5U8plDORVkq8bNXeF6yHfDvA/uXeLw///obKPbMrC4e\n7lNDCI+lnt5kZnunXt8H+Ciq+mrQMUA/M1sHTAdOMLOpFOa52ABsCCEsST2eiQf+hwV4Lo4C/hZC\n+CSEsA14BOhGYZ6L75X3/0TpPN0v9Vy5sh3wrwCtzayFmdXDLxDMTvNvYsPMDLgHWBlCGF/ipdnA\n8NT3w4HHSv/buAkhXBNC2D+EcBB+Ee25EMLZFOa5+BBYb2ZtUk+dCKwA5lBg5wK/uNzVzHZN/f9y\nIn4RvhDPxffK+39iNnCGmdUzs4OA1vjNp+ULIWT1CzgVvxv2beDqbH9eLn0B3fF+8zLgtdRXb6AJ\nMB94C3gWaBR1rTV8XnoCs1PfF+S5AA4DlgDL8VFrwwI+F1fiv+CK8YuKdQvlXOB/zX4A/BO/Xnlu\nRT87cE0qS1cDp6R7f93oJCISU9qyT0QkphTwIiIxpYAXEYkpBbyISEwp4EVEYkoBLyISUwp4EZGY\nUsCLiMTU/wda09t8tfSSEAAAAABJRU5ErkJggg==\n",
+       "text": [
+        "<matplotlib.figure.Figure at 0x7fc97906a5d0>"
+       ]
+      }
+     ],
+     "prompt_number": 24
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
