axe the judgement

--- a/synapse/synapse_SNR_uniform.ipynb
+++ b/synapse/synapse_SNR_uniform.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4e7a38eefdbd861f11f6c863587e7f364b04ddb835e28f78d8c3f252e7352e1e"
+  "signature": "sha256:eba45135686f892e3a61b8f61caa9bbd65b10645567730ba2debcd33aaa72c23"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -225,9 +225,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Uniform spikes are better than Poisson spikes in terms of SNR. This much, we already knew. However, previously, we did not know the difference in SNR sclaing.\n",
-      "\n",
-      "But if I'm using uniform spikes, I know that all of the information is simply encoded in the interval between two spikes (interspike interval (ISI)), in which case, why don't I send the ISI only when it changes?."
+      "Uniform spikes are better than Poisson spikes in terms of SNR. This much, we already knew. However, previously, we did not know the difference in SNR sclaing."
      ]
     }
    ],
