remove SNR theory only. summarize in original SNR

--- a/synapse/synapse_SNR.ipynb
+++ b/synapse/synapse_SNR.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b4f98e7e433fd3da6cf15d3635666b31ad0e25e35f1db4752384e1693d0abe3c"
+  "signature": "sha256:d3aa48d525583e26f35e3c68dbbd739d84960f6ce665c944623c19ac5d7552e6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -22,14 +22,14 @@
      "source": [
       "This notebook looks at the signal to noise ratio (SNR) of a synapse with Poisson input spike train with frequency $\\lambda$.\n",
       "\n",
-      "$$SNR = \\mu / \\sigma$$\n",
+      "$$SNR = \\frac{E[x]}{Var(x)}$$\n",
       "\n",
-      "at the steady state where $\\mu$ is the mean of the signal and $\\sigma$ is the standard devation of the signal.\n",
+      "at the steady state where $x$ is the state of the synapse.\n",
       "\n",
       "The synapse is a first order lowpass filter described by\n",
       "$$\\tau\\dot{x}=-x+u$$\n",
       "\n",
-      "where $x$ is the synapse state and $u$ is the input. $u$ is the spike input. Each spike delivers an impulse input to the synapse. That is,\n",
+      "where $u$ is the input. $u$ is the spike input. Each spike delivers an impulse input to the synapse so for spike times $t_i$,\n",
       "$$u=\\sum_i\\delta(t-t_i)$$\n",
       "\n",
       "We would like to obtain expressions for $\\mu=E[X]$ and $\\sigma = \\sqrt{Var(X)}$ where $X$ is the random variable describing the state of the synapse. \n",
@@ -43,6 +43,25 @@
       "$$x=\\sum_{i=1}^{N} \\frac{1}{\\tau}e^{-t_i/\\tau}$$\n",
       "\n",
       "where $N$ is the number of spikes received and $t_i$ is the time since arrival of the $i$th spike. "
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Summary of results"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "\\begin{align}\n",
+      "E[x] &= \\lambda \\\\\n",
+      "Var(x) &= \\frac{\\lambda}{2\\tau} \\\\\n",
+      "SNR &= \\sqrt{2\\lambda\\tau} \\\\\n",
+      "\\end{align}"
      ]
     },
     {
