--- a/synapse/synapse_SNR_uniform.ipynb
+++ b/synapse/synapse_SNR_uniform.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:8522eb1a5a8a99d3d4df1498d1954056ac49bff0aaacfc7b959568a5a1b90343"
+  "signature": "sha256:14e43ded3287ee2046739b5466e28a05dc5ed0d4e0a2f8626a2d92fccbc34af9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -36,9 +36,7 @@
       "\n",
       "For a given offset in time within one period, $t_0$, the value of the synapse looking back in time is \n",
       "\n",
-      "$$x=\\sum_{i=0}^{\\infty} \\frac{1}{\\tau}e^{-(t_i+t_0)/\\tau}.$$\n",
-      "\n",
-      "We will see that $SNR$ grows approximately linearly as spike rate increases. The exact expression is"
+      "$$x=\\sum_{i=0}^{\\infty} \\frac{1}{\\tau}e^{-(t_i+t_0)/\\tau}.$$"
      ]
     },
     {
@@ -58,7 +56,9 @@
       "Var(x) &= \\lambda^2\\left(\\frac{1}{2\\lambda\\tau}\\frac{1+e^{-1/\\lambda\\tau}}{1-e^{-1/\\lambda\\tau}} - 1\\right) \\\\\n",
       "SNR &= \\frac{1}{\\sqrt{\n",
       "    \\left(\\frac{1}{2\\lambda\\tau}\\frac{1+e^{-1/\\lambda\\tau}}{1-e^{-1/\\lambda\\tau}} - 1\\right)}} \\\\\n",
-      "\\end{align}"
+      "\\end{align}\n",
+      "\n",
+      "Eyeballing plots suggest that the $SNR$ grows approximately linearly as spike rate increases."
      ]
     },
     {
