use more coth. add pthinned notebook

--- a/synapse/synapse_SNR_uniform_pthinned.ipynb
+++ b/synapse/synapse_SNR_uniform_pthinned.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:14e844dc9fe112cf2a5ee73a1b7ce00e9911d0b76f417623c57ba7333bd94f7c"
+  "signature": "sha256:602fd96f586f60979a13b5e275454167200404810942d7f90bf161c52a3f3a9a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -30,7 +30,7 @@
       "$$SNR = \\frac{E[x]}{\\sqrt{\\operatorname{Var}(x)}}.$$\n",
       "\n",
       "The synapse with input spikes is a first order lowpass filter described by\n",
-      "$$\\tau\\dot{x}=-x+\\sum_i\\delta(t-t_i)$$\n",
+      "$$\\tau\\dot{x}=-x+\\sum_i\\delta(t-t_i)I_i$$\n",
       "\n",
       "where $x$ is the synapse state and $t_i$ is the arrival time of the $i$th spike. Since the spikes are uniform, $t_i=\\frac{i}{\\lambda}$.\n",
       "\n",
@@ -52,7 +52,7 @@
      "metadata": {},
      "source": [
       "\\begin{align}\n",
-      "E[x] &= \\lambda \\\\\n",
+      "E[x] &= \\lambda p \\\\\n",
       "\\end{align}\n",
       "\n",
       "\\begin{align}\n",
@@ -81,19 +81,34 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If we consider $t_0\\sim U[0, 1/\\lambda]$, we can find $E[x]$, $Var(x)$, and $SNR$.\n",
+      "With \n",
       "\n",
+      "$$t_0\\sim U[0, 1/\\lambda]$$ \n",
+      "and\n",
+      "\n",
+      "$$I_i = \n",
+      "\\begin{cases}\n",
+      "1 \\quad \\text{with probability} \\quad p \\\\\n",
+      "0 \\quad \\text{with probability} \\quad (1-p)\n",
+      "\\end{cases}\n",
+      "$$\n",
+      "we find $E[x]$, $Var(x)$, and $SNR$."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "Solving for $E[x]$,\n",
       "\n",
       "\\begin{align}\n",
-      "E[x] &= E\\left[\\sum_{i=0}^{\\infty} \\frac{1}{\\tau}e^{-(t_i+t_0)/\\tau}\\right] \\\\\n",
-      " &= \\frac{1}{\\tau}\\sum_{i=0}^{\\infty}e^{-t_i/\\tau} E\\left[e^{-t_0/\\tau}\\right] \\\\\n",
-      " &= \\frac{1}{\\tau}\\sum_{i=0}^{\\infty}e^{-t_i/\\tau} \\int_0^{1/\\lambda}\\frac{1}{1/\\lambda}e^{-t_0/\\tau}dt_0 \\\\\n",
-      " &= \\lambda\\frac{1}{\\tau}\\sum_{i=0}^{\\infty}e^{-t_i/\\tau} \\left(-\\tau\\left[e^{-t_0/\\tau}\\right]_0^{1/\\lambda}\\right) \\\\\n",
-      " &= \\lambda\\sum_{i=0}^{\\infty}e^{-t_i/\\tau} \\left(1-e^{-1/\\lambda\\tau}\\right) \\\\\n",
-      " &= \\lambda\\left(1-e^{-1/\\lambda\\tau}\\right)\\sum_{i=0}^{\\infty}\\left(e^{-1/\\lambda\\tau}\\right)^i  \\\\\n",
-      " &= \\lambda\\left(1-e^{-1/\\lambda\\tau}\\right)\\frac{1}{1-e^{-1/\\lambda\\tau}}  \\\\\n",
-      "E[x] &= \\lambda.\n",
+      "E[x] &= E\\left[\\sum_{i=0}^{\\infty} \\frac{1}{\\tau}e^{-(t_i+t_0)/\\tau}I_i\\right] \\\\\n",
+      " &= \\frac{1}{\\tau}E\\left[\\sum_{i=0}^{\\infty}e^{-t_i/\\tau}e^{-t_0/\\tau}I_i\\right] \\\\\n",
+      " &= \\frac{1}{\\tau}E\\left[e^{-t_0/\\tau}\\sum_{i=0}^{\\infty}e^{-t_i/\\tau}I_i\\right] \\\\\n",
+      " &= \\frac{1}{\\tau}E\\left[e^{-t_0/\\tau}\\right]\\sum_{i=0}^{\\infty}e^{-t_i/\\tau}E[I_i] \\\\\n",
+      " &= \\lambda\\left(1-e^{-1/\\lambda\\tau}\\right)\\sum_{i=0}^{\\infty}e^{-t_i/\\tau}p \\\\\n",
+      " &= \\lambda p\\left(1-e^{-1/\\lambda\\tau}\\right)\\frac{1}{1-e^{-1/\\lambda\\tau}} \\\\\n",
+      "E[x] &= \\lambda p.\n",
       "\\end{align}"
      ]
     },
@@ -104,20 +119,53 @@
       "Solving for $E[x^2]$,\n",
       "\n",
       "\\begin{align}\n",
-      "E[x^2] &= E\\left[\\left(\\sum_{i=0}^{\\infty} \\frac{1}{\\tau}e^{-(t_i+t_0)/\\tau}\\right)^2\\right] \\\\\n",
-      " &= E\\left[\\left(\\frac{1}{\\tau}e^{-t_0/\\tau}\\sum_{i=0}^{\\infty} e^{-t_i/\\tau}\\right)^2\\right] \\\\\n",
-      " &= E\\left[\\left(\\frac{1}{\\tau}e^{-t_0/\\tau}\\right)^2\\left(\\sum_{i=0}^{\\infty} e^{-t_i/\\tau}\\right)^2\\right] \\\\\n",
-      " &= \\frac{1}{\\tau^2}E\\left[\\left(e^{-t_0/\\tau}\\right)^2\\right]\\left(\\sum_{i=0}^{\\infty} e^{-t_i/\\tau}\\right)^2 \\\\\n",
-      " &= \\frac{1}{\\tau^2}E\\left[e^{-2t_0/\\tau}\\right]\\frac{1}{\\left(1-e^{-1/\\lambda\\tau}\\right)^2} \\\\\n",
-      " &= \\frac{1}{\\tau^2}\\frac{1}{\\left(1-e^{-1/\\lambda\\tau}\\right)^2}\n",
-      "    \\lambda\\int_0^{1/\\lambda}e^{-2t_0/\\tau}dt_0 \\\\\n",
-      " &= \\lambda\\frac{1}{\\tau^2}\\frac{1}{\\left(1-e^{-1/\\lambda\\tau}\\right)^2}\n",
-      "    \\left(-\\frac{\\tau}{2}\\left[e^{-2t_0/\\tau}\\right]_0^{1/\\lambda}\\right) \\\\\n",
-      " &= \\lambda\\frac{1}{2\\tau}\\frac{1}{\\left(1-e^{-1/\\lambda\\tau}\\right)^2}\\left(1-e^{-2/\\lambda\\tau}\\right) \\\\\n",
-      " &= \\lambda\\frac{1}{2\\tau}\\frac{1}{\\left(1-e^{-1/\\lambda\\tau}\\right)^2}\n",
-      "    \\left(1-e^{-1/\\lambda\\tau}\\right)\\left(1+e^{-1/\\lambda\\tau}\\right) \\\\\n",
-      " &= \\frac{\\lambda}{2\\tau}\\frac{1+e^{-1/\\lambda\\tau}}{1-e^{-1/\\lambda\\tau}}. \\\\\n",
-      "E[x^2] &= \\frac{\\lambda}{2\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right). \\\\\n",
+      "E[x^2] &= E\\left[\\left(\\sum_{i=0}^{\\infty} \\frac{1}{\\tau}e^{-(t_i+t_0)/\\tau}I_i\\right)^2\\right] \\\\\n",
+      " &= \\frac{1}{\\tau^2}E\\left[\\left(\\sum_{i=0}^{\\infty}e^{-t_i/\\tau}e^{-t_0/\\tau}I_i\\right)^2\\right] \\\\\n",
+      " &= \\frac{1}{\\tau^2}E\\left[\\left(e^{-t_0/\\tau}\\sum_{i=0}^{\\infty}e^{-t_i/\\tau}I_i\\right)^2\\right] \\\\\n",
+      " &= \\frac{1}{\\tau^2}E\\left[\\left(e^{-t_0/\\tau}\\right)^2\\right]\n",
+      "    E\\left[\\left(\\sum_{i=0}^{\\infty}e^{-t_i/\\tau}I_i\\right)^2\\right] \\\\\n",
+      " &= \\frac{1}{\\tau^2}\\frac{\\lambda\\tau}{2}\\left(1-e^{-2/\\lambda\\tau}\\right)\n",
+      "    E\\left[\\left(\\sum_{i=0}^{\\infty}e^{-t_i/\\tau}I_i\\right)^2\\right] \\\\\n",
+      " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2/\\lambda\\tau}\\right)\n",
+      "    E\\left[\\left(\\sum_{i=0}^{\\infty}e^{-t_i/\\tau}I_i\\right)^2\\right] \\\\\n",
+      " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2/\\lambda\\tau}\\right)\n",
+      "    E\\left[\\left(I_0+e^{-1/\\lambda\\tau}I_1+e^{-2/\\lambda\\tau}I_2+\\ldots\\right)\n",
+      "           \\left(I_0+e^{-1/\\lambda\\tau}I_1+e^{-2/\\lambda\\tau}I_2+\\ldots\\right)\\right] \\\\\n",
+      " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2/\\lambda\\tau}\\right)\n",
+      "    E\\left[\\sum_{k=0}^{\\infty}e^{-2k/\\lambda\\tau}I_k^2 + \n",
+      "           \\sum_{i=0,i\\neq j}^{\\infty}\\sum_{j=0}^{\\infty}e^{-i/\\lambda\\tau}e^{-j/\\lambda\\tau}I_iI_j\\right] \\\\\n",
+      " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2/\\lambda\\tau}\\right)\n",
+      "    \\left(\\sum_{k=0}^{\\infty}e^{-2k/\\lambda\\tau}E\\left[I_k^2\\right] + \n",
+      "           \\sum_{i=0,i\\neq j}^{\\infty}\\sum_{j=0}^{\\infty}e^{-i/\\lambda\\tau}e^{-j/\\lambda\\tau}E[I_iI_j]\\right) \\\\\n",
+      " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2/\\lambda\\tau}\\right)\n",
+      "    \\left(\\sum_{k=0}^{\\infty}e^{-2k/\\lambda\\tau}p + \n",
+      "           \\sum_{i=0,i\\neq j}^{\\infty}\\sum_{j=0}^{\\infty}e^{-i/\\lambda\\tau}e^{-j/\\lambda\\tau}E[I_i]E[I_j]\\right) \\\\\n",
+      " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2/\\lambda\\tau}\\right)\n",
+      "    \\left(\\sum_{k=0}^{\\infty}e^{-2k/\\lambda\\tau}p + \n",
+      "           \\sum_{i=0,i\\neq j}^{\\infty}\\sum_{j=0}^{\\infty}e^{-i/\\lambda\\tau}e^{-j/\\lambda\\tau}p^2\\right) \\\\\n",
+      " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2/\\lambda\\tau}\\right)\n",
+      "    \\left(\\frac{p}{1-e^{-2/\\lambda\\tau}} + \n",
+      "           p^2\\sum_{j=0}^{\\infty}e^{-j/\\lambda\\tau}\\sum_{i=0,i\\neq j}^{\\infty}e^{-i/\\lambda\\tau}\\right) \\\\\n",
+      " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2/\\lambda\\tau}\\right)\n",
+      "    \\left(\\frac{p}{1-e^{-2/\\lambda\\tau}} + \n",
+      "           p^2\\sum_{j=0}^{\\infty}e^{-j/\\lambda\\tau}\n",
+      "              \\left(\\sum_{i=0}^{\\infty}e^{-i/\\lambda\\tau}-e^{-j/\\lambda\\tau}\\right)\\right) \\\\\n",
+      " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2/\\lambda\\tau}\\right)\n",
+      "    \\left(\\frac{p}{1-e^{-2/\\lambda\\tau}} + \n",
+      "           p^2\\sum_{j=0}^{\\infty}e^{-j/\\lambda\\tau}\n",
+      "              \\left(\\frac{1}{1-e^{-1/\\lambda\\tau}}-e^{-j/\\lambda\\tau}\\right)\\right) \\\\\n",
+      " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2/\\lambda\\tau}\\right)\n",
+      "    \\left(\\frac{p}{1-e^{-2/\\lambda\\tau}} + \n",
+      "          p^2\\left(\\frac{1}{1-e^{-1/\\lambda\\tau}}\\sum_{j=0}^{\\infty}e^{-j/\\lambda\\tau}\n",
+      "                -\\sum_{j=0}^{\\infty}e^{-2j/\\lambda\\tau}\\right)\\right) \\\\\n",
+      " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2/\\lambda\\tau}\\right)\n",
+      "    \\left(\\frac{p}{1-e^{-2/\\lambda\\tau}} + \n",
+      "          p^2\\left(\\frac{1}{\\left(1-e^{-1/\\lambda\\tau}\\right)^2}\n",
+      "                -\\frac{1}{1-e^{-2/\\lambda\\tau}}\\right)\\right) \\\\\n",
+      " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2/\\lambda\\tau}\\right)\n",
+      "    \\left(\\frac{p}{1-e^{-2/\\lambda\\tau}} + \n",
+      "          \\frac{p^2}{\\left(1-e^{-1/\\lambda\\tau}\\right)^2}-\\frac{p^2}{1-e^{-2/\\lambda\\tau}}\\right) \\\\\n",
+      " &= \\frac{\\lambda p}{2\\tau}\\left(1 - p + p\\frac{1+e^{-1/\\lambda\\tau}}{1-e^{-1/\\lambda\\tau}}\\right) \\\\\n",
       "\\end{align}"
      ]
     },
@@ -129,9 +177,7 @@
       "\n",
       "\\begin{align}\n",
       "\\operatorname{Var}(x) &= E[x^2]-E[x]^2 \\\\\n",
-      " &=  \\frac{\\lambda}{2\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right) - \\lambda^2 \\\\\n",
-      " &=  \\lambda^2\\left(\\frac{1}{2\\lambda\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right) - 1\\right) \\\\\n",
-      " &=  \\lambda^2\\left(\\frac{1}{2\\lambda\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right) - 1\\right). \\\\\n",
+      " &= \\frac{\\lambda p}{2\\tau}\\left(1 - p + p\\frac{1+e^{-1/\\lambda\\tau}}{1-e^{-1/\\lambda\\tau}}\\right)-\\left(\\lambda p\\right)^2\n",
       "\\end{align}\n",
       "\n",
       "\n",
