--- a/synapse/synapse_SNR_uniform.ipynb
+++ b/synapse/synapse_SNR_uniform.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:14e844dc9fe112cf2a5ee73a1b7ce00e9911d0b76f417623c57ba7333bd94f7c"
+  "signature": "sha256:ed5361741c068f1d1c76ab5c83bafe67c76906dcfb11ee977a6b517681d64ae3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -81,7 +81,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If we consider $t_0\\sim U[0, 1/\\lambda]$, we can find $E[x]$, $Var(x)$, and $SNR$.\n",
+      "If we consider $t_0\\sim U[0, 1/\\lambda]$, we can find $E[x]$, $\\operatorname{Var}(x)$, and $SNR$.\n",
       "\n",
       "Solving for $E[x]$,\n",
       "\n",
