--- a/synapse/synapse_SNR_uniform_pthinned.ipynb
+++ b/synapse/synapse_SNR_uniform_pthinned.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:602fd96f586f60979a13b5e275454167200404810942d7f90bf161c52a3f3a9a"
+  "signature": "sha256:c2563e5cd35fb68f563495b500db834020762e345587c7c7bcea738341b56c80"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This notebook looks at the asymptotic SNR of a synapse with uniform input spike rate $\\lambda$ "
+      "This notebook looks at the asymptotic SNR of a synapse with $p$-thinned uniform input spike rate $\\lambda$ "
      ]
     },
     {
@@ -32,11 +32,11 @@
       "The synapse with input spikes is a first order lowpass filter described by\n",
       "$$\\tau\\dot{x}=-x+\\sum_i\\delta(t-t_i)I_i$$\n",
       "\n",
-      "where $x$ is the synapse state and $t_i$ is the arrival time of the $i$th spike. Since the spikes are uniform, $t_i=\\frac{i}{\\lambda}$.\n",
+      "where $x$ is the synapse state, $t_i$ is the arrival time of the $i$th spike, and $I_i$ thins the spikes. Spikes are uniform so $t_i=\\frac{i}{\\lambda}$, and $I\\in\\{0,1\\}$ indicates whether we keep the $i$th spike or not.\n",
       "\n",
       "For a given offset in time within one period, $t_0$, the value of the synapse looking back in time is \n",
       "\n",
-      "$$x=\\sum_{i=0}^{\\infty} \\frac{1}{\\tau}e^{-(t_i+t_0)/\\tau}.$$"
+      "$$x=\\sum_{i=0}^{\\infty} \\frac{1}{\\tau}e^{-(t_i+t_0)/\\tau}I_i.$$"
      ]
     },
     {
@@ -56,17 +56,13 @@
       "\\end{align}\n",
       "\n",
       "\\begin{align}\n",
-      "\\operatorname{Var}(x) &= \\lambda^2\\left(\\frac{1}{2\\lambda\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right) - 1\\right) \\\\\n",
-      "\\operatorname{Var}(x) &\\approx \\frac{1}{12\\tau^2} \\\\\n",
+      "\\operatorname{Var}(x)&=\\lambda^2 p^2\n",
+      "  \\left(\\frac{1}{2\\lambda p\\tau}\\left(1 - p + p\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right)\\right)-1\\right) \\\\\n",
       "\\end{align}\n",
       "\n",
       "\\begin{align}\n",
-      "SNR &= \\frac{1}{\\sqrt{\n",
-      "    \\left(\\frac{1}{2\\lambda\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right) - 1\\right)}} \\\\\n",
-      "SNR &\\approx \\sqrt{12}(\\lambda\\tau) \\\\\n",
-      "\\end{align}\n",
-      "\n",
-      "Eyeballing plots suggest that the $SNR$ grows approximately linearly as spike rate increases."
+      "SNR &= \\frac{1}{\\sqrt{\\frac{1}{2\\lambda p\\tau}\\left(1-p+p\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right)\\right)-1}} \\\\\n",
+      "\\end{align}"
      ]
     },
     {
@@ -92,7 +88,7 @@
       "0 \\quad \\text{with probability} \\quad (1-p)\n",
       "\\end{cases}\n",
       "$$\n",
-      "we find $E[x]$, $Var(x)$, and $SNR$."
+      "we find $E[x]$, $\\operatorname{Var}(x)$, and $SNR$."
      ]
     },
     {
@@ -109,7 +105,9 @@
       " &= \\lambda\\left(1-e^{-1/\\lambda\\tau}\\right)\\sum_{i=0}^{\\infty}e^{-t_i/\\tau}p \\\\\n",
       " &= \\lambda p\\left(1-e^{-1/\\lambda\\tau}\\right)\\frac{1}{1-e^{-1/\\lambda\\tau}} \\\\\n",
       "E[x] &= \\lambda p.\n",
-      "\\end{align}"
+      "\\end{align}\n",
+      "\n",
+      "To cross-check, consider that when $p=1$, $E[x]=\\lambda$, which is the same $E[x]$ as when the synapse receives unthinned uniform spikes."
      ]
     },
     {
@@ -166,7 +164,14 @@
       "    \\left(\\frac{p}{1-e^{-2/\\lambda\\tau}} + \n",
       "          \\frac{p^2}{\\left(1-e^{-1/\\lambda\\tau}\\right)^2}-\\frac{p^2}{1-e^{-2/\\lambda\\tau}}\\right) \\\\\n",
       " &= \\frac{\\lambda p}{2\\tau}\\left(1 - p + p\\frac{1+e^{-1/\\lambda\\tau}}{1-e^{-1/\\lambda\\tau}}\\right) \\\\\n",
-      "\\end{align}"
+      "E[x^2] &= \\frac{\\lambda p}{2\\tau}\\left(1 - p + p\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right)\\right) \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "To cross-check, consider that when $p=1$, \n",
+      "\n",
+      "$$E[x^2]=\\frac{\\lambda}{2\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right),$$ \n",
+      "\n",
+      "which is the same $E[x^2]$ as when the synapse receives unthinned uniform spikes."
      ]
     },
     {
@@ -177,31 +182,18 @@
       "\n",
       "\\begin{align}\n",
       "\\operatorname{Var}(x) &= E[x^2]-E[x]^2 \\\\\n",
-      " &= \\frac{\\lambda p}{2\\tau}\\left(1 - p + p\\frac{1+e^{-1/\\lambda\\tau}}{1-e^{-1/\\lambda\\tau}}\\right)-\\left(\\lambda p\\right)^2\n",
+      " &= \\frac{\\lambda p}{2\\tau}\\left(1 - p + p\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right)\\right)-\\left(\\lambda p\\right)^2 \\\\\n",
+      " &= \\lambda^2 p^2\\left(\\frac{1}{2\\lambda p\\tau}\\left(1 - p + p\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right)\\right)-1\\right). \\\\\n",
       "\\end{align}\n",
-      "\n",
-      "\n",
-      "Taking the limit (with Mathematica), \n",
-      "\n",
-      "$$\n",
-      "\\lim_{\\lambda\\rightarrow\\infty}\\operatorname{Var}(X) = \\frac{1}{12\\tau^2}.\n",
-      "$$\n",
       "\n",
       "The $SNR$ is\n",
       "\n",
       "\\begin{align}\n",
       "SNR &= \\frac{E[x]}{\\sqrt{\\operatorname{Var}(x)}} \\\\\n",
-      " &= \\frac{\\lambda}{\\lambda\\sqrt{\n",
-      "    \\left(\\frac{1}{2\\lambda\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right)- 1\\right)}} \\\\\n",
-      " &= \\frac{1}{\\sqrt{\n",
-      "    \\left(\\frac{1}{2\\lambda\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right) - 1\\right)}}. \\\\\n",
-      "\\end{align}\n",
-      "\n",
-      "In the approximation of high $\\lambda$,\n",
-      "\n",
-      "$$\n",
-      "SNR \\approx \\sqrt{12}(\\lambda\\tau).\n",
-      "$$"
+      " &= \\frac{\\lambda p}{\\lambda p\\sqrt{\n",
+      "    \\frac{1}{2\\lambda p\\tau}\\left(1-p+p\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right)\\right)-1}} \\\\\n",
+      " &= \\frac{1}{\\sqrt{\\frac{1}{2\\lambda p\\tau}\\left(1-p+p\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right)\\right)-1}}. \\\\\n",
+      "\\end{align}"
      ]
     },
     {
@@ -322,24 +314,6 @@
      "metadata": {},
      "source": [
       "The plots suggest that the SNR of a synapse grows asymptotically linearly with the input rate for uniform spiking input. This is a better scaling than a synapse with Poisson spiking input, in which the SNR grows with the square root of the input rate."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "Can we explain this with a first order expansion of the variance? No, in short, because the variance would go negative.\n",
-      "\n",
-      "\\begin{align}\n",
-      "\\operatorname{Var}(x) &=  \\lambda^2\\left(\\frac{1}{2\\lambda\\tau}\\frac{1+e^{-1/\\lambda\\tau}}{1-e^{-1/\\lambda\\tau}} - 1\\right) \\\\\n",
-      " &\\approx \\lambda^2\\left(\\frac{1}{2\\lambda\\tau}\\frac{1+(1-1/\\lambda\\tau)}{1-(1-1/\\lambda\\tau)} - 1\\right) \\\\\n",
-      " &= \\lambda^2\\left(\\frac{1}{2\\lambda\\tau}\\frac{2-1/\\lambda\\tau}{1/\\lambda\\tau} - 1\\right) \\\\\n",
-      " &= \\lambda^2\\left(\\frac{1}{2}\\left(2-\\frac{1}{\\lambda\\tau}\\right) - 1\\right) \\\\\n",
-      " &= \\lambda^2-\\frac{\\lambda}{2\\tau}-\\lambda^2 \\\\\n",
-      " &= -\\frac{\\lambda}{2\\tau} \\\\\n",
-      "\\end{align}\n",
-      "\n",
-      "which is nonsensical because it is negative."
      ]
     },
     {
